# nice65

./: .gitignore  CHANGES.txt  LICENSE.txt  README.rst  setup.cfg
.github/workflows/: main.yml
docs/: conf.py  index.rst
examples/: 65Org16.boot.asm  README.txt  swapcase.asm
nice65/: assembler.py  disassembler.py  memory.py  monitor.py
nice65/devices/: mpu6502.py  mpu65c02.py  mpu65org16.py
nice65/tests/: test_assembler.py  test_disassembler.py  test_memory.py  test_monitor.py
nice65/tests/devices/: test_mpu6502.py  test_mpu65c02.py
nice65/tests/utils/: test_addressing.py  test_conversions.py
nice65/utils/: console.py
