[metadata]
name = nice65
summary = 6502 microprocessor simulation package
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@oddbit.com
home-page = http://github.com/larsks/nice65

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nice65

[options.entry_points]
console_scripts =
    nice65mon = nice65.monitor:main


[bdist_wheel]
universal = 1
